--- a/index.html
+++ b/index.html
@@ -1,12 +1,15 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Uzair GPT - AI Chatbot</title>
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="style.css">
 </head>
+
 <body>
+    <!-- Add theme toggle button -->
     <button class="theme-toggle" onclick="toggleTheme()">🌓</button>
     <div class="chat-container">
         <h2 style="text-align: center; margin-bottom: 15px;">Uzair AI Chatbot 🤖 </h2>
@@ -29,7 +32,10 @@
         </div>
 
     </div>
+
     <script src="https://cdn.jsdelivr.net/npm/dotenv@16.0.3/config.js"></script>
-    <script src="script.js"></script>
+    <script src="javascript.js"></script>
+
 </body>
+
 </html>
