--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/pdf.js/2.11.338/pdf.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/mammoth/1.4.0/mammoth.browser.min.js"></script>
     <title>Uzair GPT - AI Chatbot</title>
     <link rel="stylesheet" href="style.css">
 </head>
@@ -25,7 +27,7 @@
         </div>
         <br>
         <div class="file-upload">
-            <input type="file" id="file-input" accept=".txt" hidden>
+            <input type="file" id="file-input" accept=".txt,.pdf,.doc,.docx" hidden>
             <label for="file-input" class="file-label">
                 📎 Attach File (<span id="file-name">No file chosen</span>)
             </label>
